[package]
name = "pid-controller"
version = "0.1.0"
edition = "2024"
authors = ["Martin Budden"]
license = "MIT OR Apache-2.0"

[dependencies]
num-traits = "0.2.19"

[dev-dependencies]
assert_float_eq = "1.2.0" # used for test
filters = { git = "https://github.com/martinbudden/Crate-filters" } # used for test
