[package]
name = "pidsk-controller"
version = "0.1.0"
edition = "2024"
authors = ["Martin Budden"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/martinbudden/crate-pid-controller"
description = "PID controller with optional feed forward and setpoint kick."
keywords = ["PID", "feed-forward", "control", "no-std"]
categories = [
    "embedded",
    "mathematics",
    "no-std",
    "science::robotics",
]

[features]
default = ["libm"]
libm = ["num-traits/libm"]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[build-dependencies]
rustc_version = "0.4"

[dependencies]
num-traits = { version = "0.2.19", default-features = false }

[dev-dependencies]
approx = { version = "0.5", default-features = false }
signal-filters = { version = "0.1.0" }

# see https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 0
debug = "line-tables-only"
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true

[profile.release]
opt-level = 3
debug = false
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[profile.release-lto]
inherits = "release"
lto = true

